blog does not overlap on start, small text, fix ul

--- a/main.css
+++ b/main.css
@@ -69,12 +69,13 @@ body {
 
 .blog-container {
 	display: block;
+	margin-top: 20%;
 }
 
 .blog-container * {
 	color: white;
 	font-family: 'Roboto', sans-serif;
-	font-size: 1.3vw;
+	font-size: 1vw;
 	font-weight: 300;
 	padding-left: 15%;
 	padding-right: 15%;
@@ -86,11 +87,16 @@ body {
 }
 
 .blog-container h1 {
-	font-size: 2.3vw;
+	font-size: 1.7vw;
 	font-weight: 500;
 }
 
 .blog-container h2 {
-	font-size: 1.7vw;
+	font-size: 1.5vw;
 	font-weight: 400;
+}
+
+.blog-container ul li {
+	padding-left: 1%;
+	padding-right: 0%;
 }
